{
  "version": 4,
  "terraform_version": "1.16.1",
  "serial": 28,
  "lineage": "d60c700e-1cfc-7e08-8a98-88e633bad581",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706113607058:internet-gateway/igw-069bd02828966d8c1",
            "id": "igw-069bd02828966d8c1",
            "owner_id": "706113607058",
            "tags": {
              "Name": "cache-lab-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "cache-lab-igw",
              "Project": "cache-lab"
            },
            "vpc_id": "vpc-0d36d7f188e9ca10e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:706113607058:loadbalancer/app/cache-lab-alb/c5157a49a95f9f5f",
            "arn_suffix": "app/cache-lab-alb/c5157a49a95f9f5f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cache-lab-alb-506418457.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:706113607058:loadbalancer/app/cache-lab-alb/c5157a49a95f9f5f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cache-lab-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03813587d46b0e915"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03434f1ae145629b5"
              },
              {
                "subnet_id": "subnet-0520d3962a5d0f08c"
              }
            ],
            "subnets": [
              "subnet-03434f1ae145629b5",
              "subnet-0520d3962a5d0f08c"
            ],
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "cache-lab"
            },
            "vpc_id": "vpc-0d36d7f188e9ca10e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:706113607058:listener/app/cache-lab-alb/c5157a49a95f9f5f/558b6d114388a928",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:706113607058:targetgroup/cache-lab-lambda/9df3cbfc9b2dab6e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:706113607058:listener/app/cache-lab-alb/c5157a49a95f9f5f/558b6d114388a928",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:706113607058:loadbalancer/app/cache-lab-alb/c5157a49a95f9f5f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "cache-lab"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.api",
            "aws_lb_target_group.lambda",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:706113607058:targetgroup/cache-lab-lambda/9df3cbfc9b2dab6e",
            "arn_suffix": "targetgroup/cache-lab-lambda/9df3cbfc9b2dab6e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": false,
                "healthy_threshold": 5,
                "interval": 35,
                "matcher": "200",
                "path": "/",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:706113607058:targetgroup/cache-lab-lambda/9df3cbfc9b2dab6e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:706113607058:loadbalancer/app/cache-lab-alb/c5157a49a95f9f5f"
            ],
            "name": "cache-lab-lambda",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
              }
            ],
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "cache-lab"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                  }
                ],
                "unhealthy_state_routing": [
                  {
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "lambda"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:706113607058:targetgroup/cache-lab-lambda/9df3cbfc9b2dab6e-20260922183641764700000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:706113607058:targetgroup/cache-lab-lambda/9df3cbfc9b2dab6e",
            "target_id": "arn:aws:lambda:us-east-1:706113607058:function:cache-lab-api"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_subnet_group.main",
            "aws_elasticache_cluster.redis",
            "aws_elasticache_subnet_group.main",
            "aws_lambda_function.api",
            "aws_lambda_permission.alb",
            "aws_lb_target_group.lambda",
            "aws_security_group.lambda",
            "aws_security_group.rds",
            "aws_security_group.redis",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main",
            "data.archive_file.lambda",
            "data.aws_availability_zones.available",
            "data.aws_iam_role.lab_role",
            "terraform_data.lambda_dependencies"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706113607058:route-table/rtb-0fc66eb01e5d9852e",
            "id": "rtb-0fc66eb01e5d9852e",
            "owner_id": "706113607058",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069bd02828966d8c1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cache-lab-public-routes"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "cache-lab-public-routes",
              "Project": "cache-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d36d7f188e9ca10e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0454444b058086d45",
            "route_table_id": "rtb-0fc66eb01e5d9852e",
            "subnet_id": "subnet-0520d3962a5d0f08c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0217e20c7e1d4fb68",
            "route_table_id": "rtb-0fc66eb01e5d9852e",
            "subnet_id": "subnet-03434f1ae145629b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706113607058:security-group/sg-03813587d46b0e915",
            "description": "Allow public HTTP traffic to the Application Load Balancer.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ALB to invoke Lambda",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03813587d46b0e915",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from the internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cache-lab-alb",
            "name_prefix": "",
            "owner_id": "706113607058",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "cache-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d36d7f188e9ca10e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706113607058:security-group/sg-062cc7a6321c0f566",
            "description": "Lambda access to PostgreSQL and Redis.",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Lambda to private data services",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-062cc7a6321c0f566",
            "ingress": [],
            "name": "cache-lab-lambda",
            "name_prefix": "",
            "owner_id": "706113607058",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "cache-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d36d7f188e9ca10e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706113607058:security-group/sg-0358b19551004c018",
            "description": "PostgreSQL accepts connections only from Lambda.",
            "egress": [],
            "id": "sg-0358b19551004c018",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from Lambda",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-062cc7a6321c0f566"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "cache-lab-rds",
            "name_prefix": "",
            "owner_id": "706113607058",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "cache-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d36d7f188e9ca10e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706113607058:security-group/sg-0baf55f8e30a61973",
            "description": "Redis accepts connections only from Lambda.",
            "egress": [],
            "id": "sg-0baf55f8e30a61973",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from Lambda",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-062cc7a6321c0f566"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "cache-lab-redis",
            "name_prefix": "",
            "owner_id": "706113607058",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "cache-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d36d7f188e9ca10e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706113607058:subnet/subnet-0d02e23baed4abf9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d02e23baed4abf9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706113607058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cache-lab-private-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "cache-lab-private-a",
              "Project": "cache-lab"
            },
            "vpc_id": "vpc-0d36d7f188e9ca10e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706113607058:subnet/subnet-0357997f88e7d7ff4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0357997f88e7d7ff4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706113607058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cache-lab-private-b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "cache-lab-private-b",
              "Project": "cache-lab"
            },
            "vpc_id": "vpc-0d36d7f188e9ca10e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706113607058:subnet/subnet-0520d3962a5d0f08c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0520d3962a5d0f08c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "706113607058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cache-lab-public-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "cache-lab-public-a",
              "Project": "cache-lab"
            },
            "vpc_id": "vpc-0d36d7f188e9ca10e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706113607058:subnet/subnet-03434f1ae145629b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03434f1ae145629b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "706113607058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cache-lab-public-b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "cache-lab-public-b",
              "Project": "cache-lab"
            },
            "vpc_id": "vpc-0d36d7f188e9ca10e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706113607058:vpc/vpc-0d36d7f188e9ca10e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01770d68dc9e229b0",
            "default_route_table_id": "rtb-0690a38032264d103",
            "default_security_group_id": "sg-03704a9c6d26913b1",
            "dhcp_options_id": "dopt-0b9fca7b637d28c42",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d36d7f188e9ca10e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0690a38032264d103",
            "owner_id": "706113607058",
            "tags": {
              "Name": "cache-lab-vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "cache-lab-vpc",
              "Project": "cache-lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}